Add airbags.c and ammend Makefile and engine.c (#3)
* init engine push

* actual init engine

* init engine

* init engine

* actual engine commit this time

* removed readme from this branch

* added .project and .cproject to .gitignore

* added .project and .cproject to .gitignore

* removed .project and .cproject files

* removed checksum

* Added airbags.c

* Delete local/snippets directory

* Delete .settings directory

* Delete README.md

* delete local/snippets and args in airbags

* added void for airbags function sig

* added void for airbags function sig

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 local/*
 output/*
-!local/snippets
-local/snippets/*
-!local/snippets/system_files.custom
 Debug/*
 .cproject
+Coverage/*
 .project
+.settings/*
